@@ -94,6 +94,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 200_000
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.N_MOD_GROUP_BY = 40
 #CONF.N_MOD_GROUP_BY = 10
+#CONF.N_MOD_GROUP_BY = 1
 
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
@@ -158,7 +159,7 @@ CONF.LOG_IMPORT_NTIMES_POP = 100000
 ##  CONF.PROCESSOR_MON_ON = false
 #CONF.PROCESSOR_MON_ON = true
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
-CONF.PROCESSOR_MON_INTERVAL = 300
+#CONF.PROCESSOR_MON_INTERVAL = 300
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 ##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
@@ -172,12 +173,12 @@ CONF.PROCESSOR_MON_INTERVAL = 300
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
 ##CONF.DEBUG_BUG49 = false
-CONF.DEBUG_BUG49 = true
+#CONF.DEBUG_BUG49 = true
 
 ##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
 #CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
